--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "axios": "^1.2.3",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
+    "react-currency-conv": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
