--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^9.15.0",
+    "mongoose": "^6.9.0",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-currency-conv": "^1.1.0",
