--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.15.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
@@ -20,6 +21,7 @@
     "react-dropdown": "^1.11.0",
     "react-google-calendar-api": "^2.1.0",
     "react-icons": "^4.7.1",
+    "react-jwt": "^1.1.8",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
