--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
+    "chart.js": "^4.2.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.15.0",
